--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Best Magisk Module
+title: Hi Im Thewave
 email: null@gmail.com
-description: "Best Magisk Module"
+description: "Hi Im Thewave"
 baseurl: "/"
-url: "https://willowthewsp.github.io"
+url: "https://thewavewsp.github.io"
 twitter_username: best magisk module
 github_username:  best magisk
-author: best magisk
+author: The Wave
 
 
 plugins:
